2004-01-29  JP Rosevear <jpr@ximian.com>

	* gui/migration.c (migrate_ical_folder_to_source): migrate to a
	specific source
	(migrate_ical_folder): create a new source based on the new source
	name/uid
	(create_calendar_contact_source): use the #define for the base uri
	(create_calendar_sources): try and find the right sources if they
	already exist
	(create_task_sources): ditto
	(migrate_calendars): make sure the personal source is the system
	source
	(migrate_tasks): ditto

2004-01-29  Rodrigo Moya <rodrigo@ximian.com>

	* gui/calendar-view.c (calendar_view_get_type_code): added support for
	the list view also.

2004-01-28  Rodrigo Moya <rodrigo@ximian.com>

	* gui/gnome-cal.c (update_query):
	* gui/e-cal-list-view.c (e_cal_list_view_update_query):
	* gui/e-cal-view.c (e_calendar_view_update_query): stop status bar
	messages madness.

2004-01-27  JP Rosevear <jpr@ximian.com>

	* gui/calendar-component.c (delete_calendar_cb): use e_cal_remove

	* gui/tasks-component.c (delete_task_list_cb): ditto

2004-01-27  Rodrigo Moya <rodrigo@ximian.com>

	Fixes #53276

	* gui/dialogs/copy-source-dialog.c (show_error): new function to
	create an error message dialog.
	(copy_source): check if the destination calendar is read only, and
	if so, don't try to copy components over. Fixed leaks. Call show_error
	to display meaningful error messages.

2004-01-26  JP Rosevear <jpr@ximian.com>

	* gui/migration.c (migrate_ical_folder): add the source to the
	group so it actually shows up

2004-01-26  JP Rosevear <jpr@ximian.com>

	* gui/migration.c (migrate_calendars): get the source name with
	out using freed memory
	(migrate_tasks): ditto

2004-01-26  Rodrigo Moya <rodrigo@ximian.com>

	Fixes #53338

	* gui/dialogs/calendar-setup.c (dialog_to_source): set the relative
	URI on the source for remote sources.

2004-01-26  Rodrigo Moya <rodrigo@ximian.com>

	Fixes #52312

	* gui/dialogs/calendar-setup.c (create_new_source_with_group):